
[Changes to NA strings are currently in progress:

    o	"NA" is no longer automatically coerced to a missing value
	for a character string.  Use as.character(NA) where a missing
	value is required, and test via is.na(x) not x == "NA".
	String "NA" is still converted to missing by scan() and
	read.table() unless `na.strings' is changed from the default.

	text.default() omits missing string values (rather than
	plotting "NA").

	Missing character strings are treated as missing much more
	consistently, e.g. in logical comparisons and in sorts.
	identical() now differentiates "NA" from the missing string.
]

NEW FEATURES

    o	cmdscale() now takes rownames from a dist object `d' as well
	as from a matrix; it has new arguments `add' (as S) and `x.ret'.

    o	New functions rowSums(), colSums(), rowMeans() and colMeans():
	versions of apply() optimized for these cases.

    o	New function findInterval() {using new C entry point
	findInterval, see below}.

    o	Add function logb(), same as log() but for S-PLUS
	compatibility (where log now has only one argument).

    o	scan() can have NULL elements in `what', useful to save space
	when columns need to be discarded.

    o	rep() has a new argument `each' for S-PLUS compatibility.
	The internal call is made available as rep.int(), again for
	help in porting code.

    o	Methods for [, [<- and as.data.frame() for class "POSIXlt".

    o	New option by = "DSTday" for seq.POSIXt().

    o	hist() now has a method for date-time objects.

    o	summary.princomp() now has a separate print() method, and
	`digits' is now an argument to the print method and not to
	summary.princomp itself.

    o	library(help = PKG) now also returns the information about the
	package PKG.

    o	formatDL() now also works if both items and descriptions are
	given in a suitable list or matrix.

    o	gzfile() is guaranteed to be available, and hence the
	`compress' option to save() and save.image().
